--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.3.0",
+    "lucide": "^0.475.0",
     "next": "^15.1.7",
     "react": "^18",
     "react-dom": "^18",
