--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "embla-carousel-react": "^8.3.0",
     "lucide": "^0.475.0",
     "next": "^15.1.7",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
